resolved overflow

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -187,6 +187,8 @@ nav {
 .grp {
   display: flex;
   margin-left: 1rem;
+  width: 80%;
+  overflow: scroll;
 }
 
 .grp p {
@@ -225,8 +227,8 @@ nav {
 }
 
 .pgrp img {
-  width: 4rem;
-  height: 4rem;
+  width: 6rem;
+  height: 6rem;
   border-radius: 0.5rem;
 }
 
@@ -271,7 +273,7 @@ label {
   height: 100%;
   align-items: flex-end;
   margin-left: 70px;
-  margin-top: -10px;
+  margin-top: -15px;
   padding: 1px;
 }
 .menu ul {
@@ -323,8 +325,11 @@ button:focus + .menu {
 
 .first-name-last-name {
   display: flex;
-  margin-bottom: 0;
+  margin: none;
   justify-content: flex-start;
+  width: 80%;
+  height: fit-content;
+  overflow: scroll;
 }
 
 .first-name-last-name p {
@@ -423,7 +428,7 @@ button:focus + .menu {
   width: 100%;
   height: 60px;
   position: relative;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .inputgrp input {
